# vxn-1

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deploy.sh
adrs/: 0003-vxn1-key-modes.md  0004-vxn1-osc-interaction-and-fixed-panels.md  0007-vxn1-mvc-architecture.md
crates/vxn-app/src/: backend.rs  controller.rs  events.rs  lib.rs  params.rs  sync.rs
crates/vxn-app/tests/: controller.rs
crates/vxn-clap/: Cargo.toml
crates/vxn-clap/src/: gui.rs  lib.rs  local.rs  shared.rs
crates/vxn-clap/tests/: host_smoke.rs
crates/vxn-dsp/: Cargo.toml
crates/vxn-dsp/src/: adsr.rs  bbd.rs  chorus.rs  delay.rs  halfband.rs  hpf.rs  ladder.rs  lfo.rs  lib.rs  math.rs  noise.rs  oscillator.rs  ota_ladder.rs  phase.rs  poly.rs  smoothing.rs
crates/vxn-engine/: Cargo.toml
crates/vxn-engine/benches/: render.rs
crates/vxn-engine/examples/: busy_profile.rs
crates/vxn-engine/presets/factory/Bass/: FM Growl.toml
crates/vxn-engine/presets/factory/Jovial Performances/: Echo Chamber.toml  Great Divide.toml  Isao Tinkle.toml  Strings Attached.toml
crates/vxn-engine/presets/factory/Jovial Presets/: Bach to Basics.toml  Bold as Brass.toml  Brass & Hold.toml  Brass Tacks.toml  Clavicle.toml  Clean Sweep.toml  Downright Bass.toml  Dukes Up.toml  Highly Strung.toml  Mellow Drama.toml  Out of Sync.toml  Pedal Pusher.toml  Phat Fifths.toml  Pluck of the Draw.toml  Solar Sails.toml  Sync or Swim.toml  Top Brass.toml  Vox Populi.toml
crates/vxn-engine/presets/factory/Keys/: Tropical Pluckstorm.toml
crates/vxn-engine/presets/factory/Lead/: Mark Will Sync Us.toml  Sync Hole.toml  Sync Lead.toml
crates/vxn-engine/presets/factory/Pad/: Clean Sweep.toml  Glass Pad.toml
crates/vxn-engine/presets/factory/Performance/: Great Divide.toml
crates/vxn-engine/src/: lib.rs  modmatrix.rs  params.rs  reverb_macro.rs  shared.rs  smoothing.rs  sync.rs  voice.rs
crates/vxn-ui/: Cargo.toml
crates/vxn-ui-vizia/src/: lib.rs
crates/vxn-ui-web/: Cargo.toml
crates/vxn-ui-web/assets/: bridge.js  browser.js  dispatch.js  faceplate.css  faceplate.html  panels.js
crates/vxn-ui-web/assets/__tests__/: paint-fader.test.js  param-id-by-name.test.js  tg-row.test.js  wire-drag.test.js
crates/vxn-ui-web/src/: lib.rs  text_input.rs
crates/vxn-ui/src/: lib.rs
epics/closed/: E004-lfo-expansion.md  E005-per-voice-and-global-lfo.md  E011-plugin-management-redesign.md  E016-js-post-e014-cleanup.md
epics/open/: E003-key-modes-voice-assignment.md  E004-lfo-expansion.md  E005-per-voice-and-global-lfo.md  E012-vreverb-port.md  E013-mixer-revamp.md  E014-faceplate-js-cleanup.md
tickets/closed/: 0014-second-lfo.md  0015-lfo-host-sync.md  0016-lfo-reset.md  0017-ui-lfo2.md  0040-html-shell-faceplate-grid.md  0041-oscillator-panels.md  0043-envelope-filter-panels.md  0046-host-automation-rust-to-js.md  0048-floating-text-input-popup.md  0054-retire-vxn-ui-vizia.md  0055-vreverb-dsp.md  0056-vreverb-globals-and-macro.md  0057-vreverb-engine-bus.md  0058-html-reverb-panel.md  0081-inline-trims.md  0082-generalised-wire-drag.md  0083-paint-fader-helper.md  0084-name-id-reverse-index.md  0085-tg-row-target.md
tickets/in-progress/: 0049-html-preset-bar.md  0050-html-preset-browser-panel.md  0051-browser-rename-move-delete.md
tickets/open/: 0009-event-router-key-mode.md  0010-midi-processor-poly.md  0012-portamento.md  0016-lfo-reset.md  0018-per-voice-lfo1.md  0019-global-lfo2.md  0028-jp8-preset-port.md  0059-vreverb-factory-tasting.md  0060-vreverb-allpass-diffusion.md  0061-ring-as-crossmod.md  0062-sub-osc-mixer.md  0063-typed-senders.md  0064-discrete-helper.md  0065-variant-idx-helper.md  0066-unify-dim-rules.md  0067-group-dispatch-state.md  0068-wire-fader-drag.md  0069-attach-value-pop.md  0070-small-helpers.md  0071-hoist-constants.md  0072-unified-cells-list.md  0073-split-browser-js.md  0074-unbundle-modals.md  0075-faceplate-js-re-review.md
xtask/src/: main.rs
