[package]
name = "vxn-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 block-processing DSP kernels (oscillators, envelopes, filters, effects)."

[lib]
# rlib only — pure DSP, no plugin surface.

[dependencies]

[dev-dependencies]
